--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=EcoVoltJava
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=RM552621
+spring.datasource.password=200804
+
+spring.jpa.show_sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
